--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^6.0.11",
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {},
   "scripts": {
